# python_skeleton

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt
requirements/: requirements-dev.txt  requirements-test.txt
