[tool.poetry]
name = "avicii-python-skeleton"
version = "0.1.0"
description = "A basic Python Service Skeleton"
authors = ["Avihay Bar <avihaybar@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.7"
pre-commit = "^3.7.0"
vulture = "^2.11"
mypy = "^1.9.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
