[tool.poetry]
name = "avicii-python-skeleton"
version = "0.1.0"
description = "A basic Python Service Skeleton"
authors = ["Avihay Bar <avihaybar@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.7"
pre-commit = "^3.7.0"
mypy = "^1.9.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"

[tool.ruff]
line-length = 120

[tool.mypy]
ignore_missing_imports = false
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
